--- a/content/issues/2023-09-21-testing.md
+++ b/content/issues/2023-09-21-testing.md
@@ -9,12 +9,14 @@ pin: false
 resolvedWhen: 2023-09-21T21:20:19.014Z
 affected:
   - fdsfds
-severity: down
+severity: disrupted
 ---
 *Investigating* - We are investigating a potential issue that might affect the uptime of one our of services. We are sorry for any inconvenience this may cause you. This incident post will be updated once we have more information.
 
-
-
-
-
 T﻿esting Add update
+
+
+
+
+
+U﻿pdate 2
