Update Incident “2023-09-21-testing”

--- a/content/issues/2023-09-21-testing.md
+++ b/content/issues/2023-09-21-testing.md
@@ -8,7 +8,7 @@ informational: false
 pin: false
 resolvedWhen: 2023-09-21T23:20:19.014Z
 affected:
-  - fdsfds
+  - Gateway
 severity: disrupted
 ---
 *Investigating* - We are investigating a potential issue that might affect the uptime of one our of services. We are sorry for any inconvenience this may cause you. This incident post will be updated once we have more information.
