Update Incident “2023-09-21-its-broke”

--- a/content/issues/2023-09-21-its-broke.md
+++ b/content/issues/2023-09-21-its-broke.md
@@ -2,7 +2,7 @@
 section: issue
 title: It's Broke
 date: 2023-09-21T21:59:18.701Z
-resolved: false
+resolved: true
 draft: false
 informational: false
 pin: false
