Update Incident “2023-09-21-testing”

--- a/content/issues/2023-09-21-testing.md
+++ b/content/issues/2023-09-21-testing.md
@@ -2,7 +2,7 @@
 section: issue
 title: Testing
 date: 2023-09-21T21:20:19.007Z
-resolved: false
+resolved: true
 draft: false
 informational: false
 pin: false
